<resources>
    <string name="app_name">Ahuja Provision</string>
    <string name="ahuja_provision">Ahuja Provision</string>
    <string name="menu">Menu</string>
    <string name="view_cart">View Cart</string>
    <string name="basmati_rice">Basmati Rice</string>
    <string name="quantity">Quantity</string>
    <string name="in_kg">in Kg</string>
    <string name="price_rs_225">Price Rs 225</string>
    <string name="add">Add</string>
    <string name="sunflower_oil">Sunflower Oil</string>
    <string name="quantity">Quantity</string>
    <string name="in_kg">in Kg</string>
    <string name="price_rs_225">Price Rs 225</string>
    <string name="add">Add</string>
    <string name="biryani_rice">Biryani Rice</string>
    <string name="in_kg">in Kg</string>
    <string name="price_rs_225">Price Rs 225</string>
    <string name="quantity">Quantity</string>
    <string name="add">Add</string>
</resources>